Add configuration doc structure

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -77,6 +77,8 @@ nav:
       - Home: index.md
       - Get started:
               - Quick Start Guide: get-started/quick-start-guide.md
+      - Configuration Guide:
+              - Configure Database: configure/configure-database.md
 
 # Markdown extensions configuration
 markdown_extensions:
